--- a/html5-and-css3-com-treasure-porth/styles.css
+++ b/html5-and-css3-com-treasure-porth/styles.css
@@ -202,5 +202,14 @@ a.social:hover {
     margin: 40px auto;
   }
 
-}
+  h3{
+    color: brown;
+  }
 
+  .card-title{
+    text-align: center;
+    border: solid black 3px;
+    border-radius: 10px;
+    margin-top: 50px;
+  }
+}
